--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Righteous&display=swap" rel="stylesheet">
     <title>Let's Go Pikachu</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <div class="conteiner">
+            <a href="#">
+                <img src="img/poke-bola.svg" alt="poke-bola">
+                <span>Pokemon</span>
+            </a>
+        </div>
+    </header>
+    <main>
+        <div class="conteiner">
+            main
+        </div>
+    </main>
+    <footer>
+        <div class="conteiner">
+            footer
+        </div>
+    </footer>
 </body>
 </html>
