--- a/index.html
+++ b/index.html
@@ -20,13 +20,28 @@
     </header>
     <main>
         <div class="conteiner">
-            main
+            <div class="title">
+                <h1 class="title_text">Pikachu</h1>
+                <span class="title_transparent">Pikachu</span>
+            </div>
+            <div class="description">
+                <h2 class="description_title">
+                    Lets'Go, Pikachu
+                </h2>
+                <p class="description_text">Torne-se o melhor Treinador de Pokémon que puder, enquanto batalha outros Treinadores, Líderes de Ginásios e a sinistra Equipe Rocket.</p>
+            </div>
+            <a href="" class="action">
+                &#10515; Download
+            </a>
         </div>
     </main>
     <footer>
         <div class="conteiner">
-            footer
+            <p class="footer_text">
+                Copyright © 2022 | @ Leonid
+            </p>
         </div>
     </footer>
+    <img class="pikachu" src="./img/pikachu.svg" alt="pikachu">
 </body>
 </html>
