--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <footer>
         <div class="conteiner">
             <p class="footer_text">
-                Copyright © 2022 | @ Leonid
+                Copyright © 2025 | @ David
             </p>
         </div>
     </footer>
